@@ -1976,15 +1976,7 @@ geniCodeCast (sym_link *type, operand *op, bool implicit)
   ic = newiCode (CAST, operandFromLink (type), geniCodeRValue (op, FALSE));
   IC_RESULT (ic) = newiTempOperand (type, 0);
 
-  /* preserve the storage class & output class */
-  /* of the original variable                  */
   restype = getSpec (operandType (IC_RESULT (ic)));
-  if (!IS_LITERAL (opetype) && !IS_BIT (opetype))
-    {
-      SPEC_SCLS (restype) = SPEC_SCLS (opetype);
-      SPEC_OCLS (restype) = SPEC_OCLS (opetype);
-    }
-
   /* Convert cast to _Bool bitfield members to casts to _Bool. */
   if (SPEC_NOUN (restype) == V_BBITFIELD)
     SPEC_NOUN (restype) = V_BOOL;
@@ -2284,8 +2276,7 @@ geniCodeAdd (operand * left, operand * right, RESULT_TYPE resultType, int lvl)
   IC_RESULT (ic) = newiTempOperand (resType, 1);
   IC_RESULT (ic)->isaddr = (isarray ? 1 : 0);
 
-  /* if left or right is a float then support
-     routine */
+  /* if left or right is a float then support routine */
   if (IS_FLOAT (ltype) || IS_FLOAT (rtype) || IS_FIXED (ltype) || IS_FIXED (rtype))
     ic->supportRtn = 1;
 
@@ -2400,8 +2391,9 @@ geniCodeArray (operand * left, operand * right, int lvl)
 
   ic = newiCode ('+', left, right);
 
-  IC_RESULT (ic) = newiTempOperand (((IS_PTR (ltype) &&
-                                      !IS_AGGREGATE (ltype->next) && !IS_PTR (ltype->next)) ? ltype : ltype->next), 0);
+  IC_RESULT (ic) = newiTempOperand ((IS_PTR (ltype) &&
+                                     !IS_AGGREGATE (ltype->next) &&
+                                     !IS_PTR (ltype->next)) ? ltype : ltype->next, 0);
 
   if (!IS_AGGREGATE (ltype->next))
     {
@@ -3840,7 +3832,6 @@ geniCodeSwitch (ast * tree, int lvl)
       ADDTOCHAIN (ic);
       caseVals = caseVals->next;
     }
-
 
 defaultOrBreak:
   /* if default is present then goto break else break */
