@@ -1,3 +1,7 @@
+2012-01-08 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCicode.c (geniCodeCast): fixed bug 3470368
+
 2012-01-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c:
